<resources>
    <string name="app_name">Covid Volunteer</string>
    <string name="permission_needed">Location permission needed</string>
    <string name="permission_dialog_desc">In order to use the app, you must give us location permissions</string>
    <string name="go_to_settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_volunteer">Add volunteer</string>
    <string name="add_people_who_needs_help">Add people who needs help</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name*</string>
    <string name="hint_notes">Notes</string>
    <string name="to_add_new_volunteer">To add new volunteer, please fill out the fields below</string>
    <string name="to_add_new_endangered">To add new endangered person, please fill out the fields below</string>
    <string name="choose_address">Choose address</string>
    <string name="drop_the_pin_on_your_address">Drop the pin on address you want to add</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="add_endangered">Add endangered</string>
    <string name="create">Create</string>
    <string name="visited">Visited</string>
    <string name="visit_detail">Details</string>
    <string name="remove">Remove</string>
    <string name="last_visited">Last visit:</string>
    <string name="required">Required:</string>
    <string name="volunteer_who_visited_this_person_last_wrote">Feedback from last volunteer who visited this person:</string>
    <string name="view_all_feedback">View all feedback</string>
    <string name="address">Address*</string>
    <string name="apartment">Apartment*</string>
    <string name="floor">Floor</string>
    <string name="notes">Notes:</string>
    <string name="address_label">Address:</string>
    <string name="format_address" translatable="false">%1s/%1s</string>
    <string name="visit_details">Visit details</string>
    <string name="add_visit">Add visit</string>
    <string name="add_visit_for_this_person">Add visit for this person</string>
    <string name="please_send_us_your_feedback_if_you_ve_visited_this_person">Please send us your feedback if you\'ve visited this person</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="email_label" translatable="false">Email:</string>
    <string name="select_max_distance_to_search_for_endangered_person">Select max distance to search for endangered person:</string>
    <string name="selected_distance">Selected distance: %1$dkm</string>
    <string name="volunteer_details">Volunteer details</string>
    <string name="here_you_can_find_detailed_information_about_volunteer">Here you can find detailed information about volunteer.</string>
    <string name="please_contact_volunteer_only_if_s_absolutely_necessary">Please contact volunteer only if it\'s absolutely necessary!</string>
    <string name="phone_label">Phone:</string>

    <string name="facebook_app_id" translatable="false">586359555297489</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb586359555297489</string>
    <string name="welcome_to_nfight_covid_19" translatable="false">Fight Covid 19</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_visit">Create visit</string>
    <string name="visit_created">Visit created</string>
    <string name="error_creating_visit">Error creating visit</string>
    <string name="map_type">Map type</string>
    <string name="default_map" translatable="false">Default</string>
    <string name="satellite_map" translatable="false">"Satellite "</string>
    <string name="terrain_map" translatable="false">Terrain</string>
    <string name="nobody_visited_person">Nobody visited this person yet</string>
    <string name="no_special_notes">No special notes</string>
    <string name="volunteer">Volunteer</string>
    <string name="endangered_person">Endangered person</string>
    <string name="more_details">Click for more details</string>
    <string name="help">Help</string>
    <string name="map_marker_legend" translatable="false">Map marker legend:</string>
    <string name="volunteer_marker" translatable="false">Volunteer marker</string>
    <string name="last_visit_was_today">Last visit was today</string>
    <string name="last_visit_was_in_the_last_3_days">Last visit was in the last 3 days</string>
    <string name="no_feedback_for_this_person">No feedback for this person</string>
    <string name="last_visit_was_more_then_7_days_ago">Last visit was more then 7 days ago</string>
</resources>
