<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/add_volunteer_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/add_volunteer" />

        <TextView
            android:id="@+id/add_volunteer_desc"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_volunteer_title"
            tools:text="@string/to_add_new_volunteer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_volunteer_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apartment_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/floor_text_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apartment_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/apartment"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/floor_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/apartment_text_layout"
            app:layout_constraintTop_toBottomOf="@id/address_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/floor_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/floor"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apartment_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_text_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:maxLines="5"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_edit_text"
                style="@style/CustomEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/hint_notes"
                android:imeOptions="actionDone"
                android:inputType="text|textMultiLine|textCapSentences"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add_volunteer"
            style="@style/PrimaryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_text_layout" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/create_person_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/button_add_volunteer"
            app:layout_constraintEnd_toEndOf="@id/button_add_volunteer"
            app:layout_constraintStart_toStartOf="@id/button_add_volunteer"
            app:layout_constraintTop_toTopOf="@id/button_add_volunteer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>